--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="google-maps hhh  ">
                 <a href="https://g.page/r/CRrxkAg-yHDjEBM/review" target="_blank" class="hh sh up-down btn"> 
   
-                    <h4 class="cv text-color ">تقيممكم يسعدنا ويدعمنا<i class="fa-solid fa-star icon"></i></h4>
+                    <h4 class="cv text-color ">تقيمكم يسعدنا ويدعمنا<i class="fa-solid fa-star icon"></i></h4>
                     
                 </a>
             </div>
