--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <i class="fa-brands fa-tiktok i size"> </i>
                         
                         </a>
-                        <a class="box box2" target="_blank" href="https://www.snapchat.com/add/khaledomar">           
+                        <a class="box box2" target="_blank" href="https://www.snapchat.com/add/drkhaledomar?share_id=sAJyroTdprE&locale=ar-AE">           
                             <i class="fa-brands fa-snapchat size"></i>
                         </a>
                         <a class="box box3" target="_blank" href="https://www.instagram.com/dr.khaled.omar/" >
