--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
  
 </div>
 <br>
-    <h5 class="copy">© 2025  جميع الحقوق محفوظة لدي لدكتور خالد عمر</h5>
-<br><br>
+    <h5 class="copy">جميع الحقوق محفوظة لدي   </h5>
+    <h5 class="copy">© 2025   لدكتور خالد عمر</h5>
+
+<br>
 </body>
 </html>
