--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <button id="scrollToTopBtn" title="ارجع للأعلى"><i class="fa-solid fa-arrow-up"></i></button>
 
   <header class="main-header">
-    <img src="img/logo.png" alt="شعار المجمع" class="logo" />
+    <img src="logo.png" alt="شعار المجمع" class="logo" />
     <h1>مجمع تاج الطفولة الطبي العام</h1>
   </header>
 
@@ -37,19 +37,19 @@
     </section>
     <div class="social-icons">
       <a href="https://www.tiktok.com/@dr.khaled.omar1" onclick="trackClick('tiktok')" target="_blank" rel="noopener noreferrer" >
-        <img src="img/tiktok.jpg" alt="tiktok" class="social-icon">
+        <img src="tiktok.jpg" alt="tiktok" class="social-icon">
       </a>
 
       <a href="https://wa.me/+966538770001/?text=*السلام عليكم*  أنا والد الطفل: عمره: سنة و شهر. اريد الإستفسار عن شيء" onclick="trackClick('whatsapp')" target="_blank" rel="noopener noreferrer">
-        <img src="img/whatsapp.jpg" alt="whatsapp" class="social-icon">
+        <img src="whatsapp.jpg" alt="whatsapp" class="social-icon">
       </a>
 
       <a href="https://www.instagram.com/dr.khaled.omar/" onclick="trackClick('instagram')" target="_blank" rel="noopener noreferrer">
-        <img src="img/instagram.jpg" alt="instagram" class="social-icon">
+        <img src="instagram.jpg" alt="instagram" class="social-icon">
       </a>
 
       <a href="https://www.snapchat.com/add/khaledomar" onclick="trackClick('snapchat')" target="_blank" rel="noopener noreferrer">
-        <img src="img/snapchat.jpg" alt="snapchat" class="social-icon">
+        <img src="snapchat.jpg" alt="snapchat" class="social-icon">
       </a>
     </div>
 
@@ -82,7 +82,7 @@
     </script>
 
     <div class="working-hours">
-      <p><strong>مواعيد العمل:</strong><br> من 1:30 ظهرًا حتى 9:30 مساءً</p>
+      <p><strong>مواعيد العمل</strong><br>من السبت إلى الخميس<br>من 1:30 ظهراً إلى 9:30 مساءً<br>ماعدا الجمعة أجازة</p>
     </div>
     <section class="doctor-info text">
       <button class="button">
@@ -118,6 +118,8 @@
         <h4 class="service ser-hov">تشخيص وعلاج أمراض الطفولة</h4>
         <h4 class="service ser-hov">رعاية الأطفال حديثى الولادة والرضع</h4>
         <h4 class="service ser-hov">الأستشارة الغذائية والنظام الغذائى للأطفال</h4>
+        <h4 class="service ser-hov">إستشارات الرضاعة الطبيعيه</h4>
+
       </ul>
     </section>
     <section class="faq text">
@@ -170,77 +172,77 @@
 <section class="testimonials">
   <h2 class="testimonial-heading">آراء مرضانا</h2>
   <p class="testimonial-intro">
-    نعتز بثقة مرضانا الغالية، وهذه نماذج من تجاربهم الإيجابية مع الرعاية الطبية المتخصصة التي يقدمها مجمع تاج الطفولة  عيادة الاطفال د. خالد عمر.
+    نعتز بثقة مرضانا الغالية، وهذه نماذج من تجاربهم الإيجابية مع الرعاية الطبية المتخصصة التي يقدمها مجمع تاج الطفولة <br> عيادة الاطفال <br>د/ خالد عمر.
   </p>
   <div class="testimonial-gallery">
     <!-- أول 3 تعليقات تظهر مباشرة -->
     <div class="testimonial-card">
       <a href="https://maps.app.goo.gl/mDHgCxNbZYAmPJw49" target="_blank">
-        <img src="img/com1.png" loading="lazy" alt="تعليق مريض 1">
+        <img src="com1.png" loading="lazy" alt="تعليق مريض 1">
       </a>
     </div>
 
     <div class="testimonial-card">
       <a href="https://maps.app.goo.gl/a5JZh2CSZZbYwBicA" target="_blank">
-        <img src="img/com2.png" loading="lazy" alt="تعليق مريض 2">
+        <img src="com2.png" loading="lazy" alt="تعليق مريض 2">
         
       </a>
     </div>
 
     <div class="testimonial-card">
       <a href="https://maps.app.goo.gl/zoCocG1xmKqyVZPv7" target="_blank">
-        <img src="img/com3.png" loading="lazy" alt="تعليق مريض 3">
+        <img src="com3.png" loading="lazy" alt="تعليق مريض 3">
       </a>
     </div>
 
     <!-- تعليقات مخفية بالبداية -->
     <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/tXJ1YHTnwutVM5Rn7" target="_blank">
-        <img src="img/com4.png" loading="lazy" alt="تعليق مريض 4">
+        <img src="com4.png" loading="lazy" alt="تعليق مريض 4">
       </a>
     </div>
 
     <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/tyPRh2hgRrq78Yw69" target="_blank">
-        <img src="img/com5.png" loading="lazy" alt="تعليق مريض 5"> 
+        <img src="com5.png" loading="lazy" alt="تعليق مريض 5"> 
       </a>
     </div>
 
     <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/CN8Uq7ZUGJ9vz3Xg8" target="_blank">
-        <img src="img/com6.png" loading="lazy" alt="تعليق مريض 6">
+        <img src="com6.png" loading="lazy" alt="تعليق مريض 6">
       </a>
     </div>
 
     <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/gYJsEgYsCBwLJPSW7" target="_blank">
-        <img src="img/com7.png" loading="lazy" alt="تعليق مريض 7">
+        <img src="com7.png" loading="lazy" alt="تعليق مريض 7">
       </a>
     </div>
         <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/UApRhkFDdbywcXaV9" target="_blank">
-        <img src="img/com8.png" loading="lazy" alt="تعليق مريض 8">
+        <img src="com8.png" loading="lazy" alt="تعليق مريض 8">
       </a>
     </div>
         <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/19rzf1nfirgSvmLn8" target="_blank">
-        <img src="img/com9.png" loading="lazy" alt="تعليق مريض 9">
+        <img src="com9.png" loading="lazy" alt="تعليق مريض 9">
       </a>
     </div>
         <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/XfiatGJtDqRzreec9" target="_blank">
-        <img src="img/com10.png" loading="lazy" alt="تعليق مريض 10">
+        <img src="com10.png" loading="lazy" alt="تعليق مريض 10">
       </a>
     </div>
         <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/GfdVjRofT9GvfCGa9" target="_blank">
-        <img src="img/com11.png" loading="lazy" alt="تعليق مريض 11">
+        <img src="com11.png" loading="lazy" alt="تعليق مريض 11">
       </a>
     </div>
 
         <div class="testimonial-card more-comments" style="display: none;">
       <a href="https://maps.app.goo.gl/k8Y1fM56q7jLbXEM9" target="_blank">
-        <img src="img/com12.png" loading="lazy" alt="تعليق مريض 12">
+        <img src="com12.png" loading="lazy" alt="تعليق مريض 12">
       </a>
     </div>
 
