--- a/admin.html
+++ b/admin.html
@@ -60,6 +60,7 @@
 
   <button id="resetVisitors">إعادة تعيين عداد الزوار</button>
   <button id="resetSocial">إعادة عدادات السوشيال</button>
+  <button id="resetVisitorsmin">تنقيص عدد الزوار</button>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -104,7 +105,13 @@
         visitorRef.set(0);
       }
     });
-
+    
+    // نقص 1 من عدد الزوار
+    document.getElementById('resetVisitorsmin').addEventListener('click', () => {
+      if (confirm("هل تريد تنقيص عدد الزوار1؟")) {
+        visitorRef.set(-1);
+      }
+    });
     // إعادة تعيين السوشيال
     document.getElementById('resetSocial').addEventListener('click', () => {
       if (confirm("هل تريد إعادة عدادات السوشيال كلها؟")) {
