--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
   </header>
 
   <main class="content">
-    <section class="doctor-info text">
+    <section class="doctor-info text" style="margin-top:150px; padding-top: 70px
+    ;">
+          <div class="doctor-photo" style="  width: 200px;
+  height: 200px;
+  border-radius: 50%; /* يجعلها دائرية */
+  overflow: hidden;
+  border: 5px solid #0b3964a7; /* إطار الدائرة */
+  position: absolute;
+  top: 180px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;">
+      <img src="03.png" style=" width: 200px;height: 200px;" alt="د/ خالد عمر">
+    </div>
       <div class="content">
         <h1 class="my-name">د/ خالد عمر
           <div class="aurora">
