--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
   </header>
 
   <main class="content">
-    <section class="doctor-info text" style="margin-top:150px; padding-top: 70px
-    ;">
+    <section class="doctor-info text" style="margin-top:150px; padding-top: 70px 
+    ; @media (min-width: 500px) {
+      margin-top:170px; 
+      padding-top: 100px ;
+    }">
           <div class="doctor-photo" style="  width: 200px;
   height: 200px;
   border-radius: 50%; /* يجعلها دائرية */
