--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   left: 50%;
   transform: translateX(-50%);
   background-color: white;">
-      <img src="03.png" style=" width: 200px;height: 200px;" alt="د/ خالد عمر">
+      <img  src="03.png" style=" width: 200px;height: 200px; margin: 5px;" alt="د/ خالد عمر">
     </div>
       <div class="content">
         <h1 class="my-name">د/ خالد عمر
