--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       padding-top: 100px ;
     }">
           <div class="doctor-photo" style="  width: 200px;
+          margin-bottom: 10px;
   height: 200px;
   border-radius: 50%; /* يجعلها دائرية */
   overflow: hidden;
@@ -37,7 +38,7 @@
   left: 50%;
   transform: translateX(-50%);
   background-color: white;">
-      <img  src="03.png" style=" width: 200px;height: 200px; margin: 5px;" alt="د/ خالد عمر">
+      <img  src="03.png" style=" width: 200px;height: 200px; " alt="د/ خالد عمر">
     </div>
       <div class="content">
         <h1 class="my-name">د/ خالد عمر
