--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       margin-top:170px; 
       padding-top: 100px ;
     }">
-          <div class="doctor-photo" style="  width: 200px;
+          <div class="doctor-photo" style="@media (min-width: 500px) {width: 150px; height: 150px;}  width: 200px;
           margin-bottom: 10px;
   height: 200px;
   border-radius: 50%; /* يجعلها دائرية */
