--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
   <main class="content">
     <section class="doctor-info text" style="margin-top:150px; padding-top: 70px 
-    ; @media (min-width: 500px) {
+    ; @media (max-width: 500px) {
       margin-top:170px; 
       padding-top: 100px ;
     }">
-          <div class="doctor-photo" style="@media (min-width: 500px) {width: 150px; height: 150px;}  width: 200px;
+          <div class="doctor-photo" style="@media (max-width: 500px) {width: 150px; height: 150px;}  width: 200px;
           margin-bottom: 10px;
   height: 200px;
   border-radius: 50%; /* يجعلها دائرية */
