--- a/index.html
+++ b/index.html
@@ -17,29 +17,48 @@
   <button id="scrollToTopBtn" title="ارجع للأعلى"><i class="fa-solid fa-arrow-up"></i></button>
 
   <header class="main-header">
+<div class="rebrand-box">
+
+  <p class="title">تم تغيير اسم المجمع من</p>
+
+  <!-- المكان القديم (نفس الكود بالظبط) -->
+  <div class="old-brand">
     <img src="logo.png" alt="شعار المجمع" class="logo" />
-    <h1>مجمع تاج الطفولة الطبي العام</h1>
+    <h1 >مجمع تاج الطفولة الطبي العام</h1>
+  </div>
+
+  <p class="title now">الى</p>
+
+  <!-- المكان الجديد -->
+  <div class="new-brand">
+    <img src="new-logo.png" alt="اللوجو الجديد" class="logoo" />
+    <h1 class="new-logo">مجمع وايت مون كير الطبي العام</h1>
+  </div>
+
+</div>
+
   </header>
 
-  <main class="content">
-    <section class="doctor-info text" style="margin-top:150px; padding-top: 70px 
+  <main  class="content">
+    <section  class="doctor-info text" style="margin-top:150px; padding-top: 70px  
     ; @media (max-width: 500px) {
       margin-top:170px; 
       padding-top: 100px ;
+      
     }">
           <div class="doctor-photo" style="@media (max-width: 500px) {width: 150px; height: 150px;  top: 160px;
-}  width: 200px;
+}  width: 175px;
           margin-bottom: 10px;
-  height: 200px;
+  height: 175px;
   border-radius: 50%; /* يجعلها دائرية */
   overflow: hidden;
   border: 5px solid #0b3964a7; /* إطار الدائرة */
   position: absolute;
-  top: 180px;
+  top: 460px;
   left: 50%;
   transform: translateX(-50%);
   background-color: white;">
-      <img  src="03.png" style=" width: 200px;height: 200px; " alt="د/ خالد عمر">
+      <img  src="03.png" style=" width: 175px;height: 175px; " alt="د/ خالد عمر">
     </div>
       <div class="content">
         <h1 class="my-name">د/ خالد عمر
